--- a/week2.html
+++ b/week2.html
@@ -10,7 +10,7 @@
     <a-cylinder color="white" height="2.370" radius="0.05" position="-2.526 -0.767 -5"></a-cylinder>
     <a-torus-knot color="black" radius="1.2" position="-3 1 -5" animation="property: rotation; to: 0 0 360; loop: true; dur: 5000"></a-torus-knot>
     <a-plane src="https://cdnb.artstation.com/p/assets/video_clips/images/024/538/805/large/pixel-jeff-thumb.jpg?1582740711" width="9.740" height="5.180" position="4.025 2.915 -7.420"></a-plane>
-    <a-text value="Kravets O." font="AA-Higherup-msdf.json" negate="false" color="#5DFB13" width="7.8" position="2.609 4.072 -5.434"></a-text>
+    <a-text value="Week 2 by Kravets O." font="AA-Higherup-msdf.json" negate="false" color="#5DFB13" width="7.8" position="2.609 4.072 -5.434"></a-text>
   </a-scene> 
 </html>
 
