--- a/week3.html
+++ b/week3.html
@@ -12,7 +12,7 @@
           <a-cylinder color="white" height="2.370" radius="0.05" position="1 0 0"></a-cylinder>
           <a-torus-knot color="#CCB827" radius="0.5" position="1 0.5 0" animation="property: rotation; to: 0 0 360; loop: true; dur: 5000"></a-torus-knot>
           <a-plane src="https://cdnb.artstation.com/p/assets/video_clips/images/024/538/805/large/pixel-jeff-thumb.jpg?1582740711" width="2.5" height="1.5" position="0 1 -1"></a-plane>
-          <a-text value="Kravets O." font="AA-Higherup-msdf.json" negate="false" color="red" width="3" position="-1 0.5 -1" rotation="0 0 0" animation="property: rotation; to: 0 0 -360; loop: true; dur: 5000"></a-text>
+          <a-text value="Week 2 by Kravets O." font="AA-Higherup-msdf.json" negate="false" color="red" width="3" position="-1 0.5 -1" rotation="0 0 0" animation="property: rotation; to: 0 0 -360; loop: true; dur: 5000"></a-text>
         </a-marker>
         <a-entity camera></a-entity>
       </a-scene>
