--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <li><a href="week2.html" target="_blank">Завдання 2-го тижня</a></li>
   <li><a href="week3.html" target="_blank">Завдання 3-го тижня</a></li>
   <li><a href="week4.html" target="_blank">Завдання 4-го тижня</a></li>
+  <li><a href="week5.html" target="_blank">Завдання 5-го тижня</a></li>
   
   </ol>
   
