--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <li><a href="week3.html" target="_blank">Завдання 3-го тижня</a></li>
   <li><a href="week4.html" target="_blank">Завдання 4-го тижня</a></li>
   <li><a href="week5.html" target="_blank">Завдання 5-го тижня</a></li>
-  
+  <li><a href="week6.html" target="_blank">Завдання 5-го тижня</a></li>
   </ol>
   
   </body>
