--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <li><a href="week4.html" target="_blank">Завдання 4-го тижня</a></li>
   <li><a href="week5.html" target="_blank">Завдання 5-го тижня</a></li>
   <li><a href="week6.html" target="_blank">Завдання 6-го тижня</a></li>
+  <li><a href="week7.html" target="_blank">Завдання 6-го тижня</a></li> 
+  <li><a href="week8.html" target="_blank">Завдання 6-го тижня</a></li>
   </ol>
   
   </body>
