--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <li><a href="week7.html" target="_blank">Завдання 7-го тижня</a></li> 
   <li><a href="week8.html" target="_blank">Завдання 8-го тижня</a></li>
   <li><a href="week9.html" target="_blank">Завдання 9-го тижня</a></li>
+  <li><a href="week10.html" target="_blank">Завдання 10-го тижня</a></li>
   <li><a href="week11.html" target="_blank">Завдання 11-го тижня</a></li>  
   </ol>
   
